# PySpectrometer3

./: .gitignore  MIGRATION.md  Makefile  README.md  diagrams_src.txt  pyproject.toml  pyspectrometer.toml.example  requirements.txt
data/: Spectrum-20260309--010902.csv  Spectrum-20260309--013921.csv  fluorescent_Sylvania_VHO_cool_white.prn  fluorescent_TLD36W83.prn  fluorescent_TLD36W865_cool_daylight.prn  low_pressure_mercury_lamp.csv  silicon_CMOS_spectral_sensitivity.csv
docs/: ARCHITECTURE.md  AUTO_EXPOSURE_ALGORITHM.md  CALIBRATION_PEAK_X0_INVESTIGATION.md  CODE_QUALITY_REPORT.md  CONFIGURATION_ARCHITECTURE.md  DISPLAY_GUI_ARCHITECTURE.md  GUI_MIGRATION_PLAN.md  MIGRATION.md  MODES_SPEC.md  REFACTORING_GUIDE.md  REFACTORING_REVIEW.md  REFERENCE_OVERLAY_SPEC.md  SPECTRUM_INTENSITY_GAIN_EXPOSURE.md  SPECTRUM_MATCHING_RESEARCH.md  SPECTRUM_TRACE_MODEL.md  SPEC_SPECTRUM_EXTRACTION.md  TESTING_STRATEGY.md
experiments/: _bench.py  benchmark_csvs.py  calibration_matching_and_fitting.md  debug_214345.py  debug_best_triplet_match.py  debug_calibration.py  debug_color_from_csv.py  debug_first_triplet_vs_others.py  debug_out.txt  debug_peaks_dips.py  debug_peaks_dips_topk.py  debug_ref.py  debug_ref_features.py  debug_scores.py  debug_triplet_matching.py  experiment_hough_matching.py  experiment_top6_triplets.py  sim_debug.txt  sim_narrow_range.py  test_calibration_fits.py  time_peakdip.py
output/: Spectrum-20260311--193116.csv  Spectrum-20260311--193723.csv  Spectrum-20260311--193856.csv  Spectrum-20260311--213319.csv  Spectrum-20260311--214345.csv  Spectrum-20260313--003204.csv  Spectrum-20260313--120637.csv  Spectrum-20260313--120711.csv  Spectrum-20260313--120723.csv  Spectrum-20260313--120738.csv  Spectrum-20260313--120757.csv  Spectrum-20260313--120839.csv  Spectrum-20260313--121011.csv  Spectrum-20260313--121030.csv  Spectrum-20260313--121115.csv  Spectrum-20260313--122815.csv  Spectrum-20260313--130715.csv  Spectrum-20260313--133224.csv
scripts/: extract_sensor_curve.py  setup-partitions-resize.sh  setup-partitions.sh  (+3 more)
(+129 files in other folders)
